# nltk_book

./: .pre-commit-config.yaml  first_setup  pyproject.toml
chapters/: 1_Accessing Text Corpora and Lexical Resources.ipynb  1_Language_Processing_and_Python.ipynb  3_Processing_Raw_Text.ipynb  4_Writing_Structured_Programs.ipynb  5_Categorizing_and_Tagging_Words.ipynb  6_Learning _To_Classify_Text.ipynb  t2.pkl
homework/: 1_Accessing Text Corpora and Lexical Resources.ipynb  1_Language_Processing_and_Python.ipynb  2_Accessing Text Corpora and Lexical Resources-Copy1.ipynb  3_Processing_Raw_Text.ipynb
