[tool.poetry]
name = "nltk_book"
version = "0.1.0"
description = ""
authors = ["Hamzah Iqbal <hamzahiqbal.acc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.5"
numpy = "^1.19.0"
nltk = "^3.5"

[tool.poetry.dev-dependencies]
pre-commit = "^2.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
